# ecargoBike

./: README.md
Electrical/: README.md
Electrical/batController/firmware/: CMakeLists.txt  README.md  main.c
Electrical/batController/firmware/libs/ina228/: CMakeLists.txt  ina228.c  ina228.h
Electrical/batController/firmware/libs/ws2812/: CMakeLists.txt  ws2812.pio.c  ws2812.pio.h
Electrical/e-paper/: .gitignore
Electrical/e-paper/firmware/: CMakeLists.txt  hello_usb.c  main.cpp
Electrical/e-paper/firmware/libs/can/: CMakeLists.txt
Electrical/e-paper/firmware/libs/epaper/: CMakeLists.txt  PDLS_EXT3_Basic_Fast.h  Screen_EPD_EXT3.cpp  arduToPico.h  hV_Board.cpp  hV_Configuration.h  hV_HAL_Peripherals.cpp  hV_HAL_Peripherals.h  hV_Screen_Buffer.cpp  hV_Screen_Buffer.h  hV_Utilities_Common.cpp  hV_Utilities_Common.h  hV_Utilities_PDLS.cpp
Electrical/e-paper/firmware/libs/ina228/: ina228.c  ina228.h
Electrical/tools/: 99-picotool-fedora.rules
Mechanical/: README.md
